crates/toml_edit/tests/snapshots/invalid/local-time/minute-over.stderr
TOML parse error at line 2, column 5
  |
2 | d = 00:60:00
  |     ^^^^^^^^
invalid time, expected minute between 00 and 59
